Fixed page for submission

--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -7,24 +7,22 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h1>Our Menu</h1>
+	<h1 id="title">OUR MENU</h1>
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="col-lg col-md" id="chicken">
 			<div class="menu-card">
-			<div class="menu-title">Chicken</div>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div></div>
+			<p class="menu-title">Chicken</p>
+			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
 
-			<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="col-lg col-md" id="beef">
 			<div class="menu-card">
-			<div class="menu-title">Beef</div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div></div>
+			<p class="menu-title">Beef</p>
+			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
 
-			<div class="col-lg-4 col-md-12 col-sm-12">
-			
+		<div class="col-lg col-md" id="sushi">
 			<div class="menu-card">
-			<div class="menu-title">Sushi</div>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div></div>
-		</div>
+			<p class="menu-title">Sushi</p>
+			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
 	</div>
 </body>
 </html>
