--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Coursera-test</h1>
       <h2 class="project-tagline">Coursera test repository</h2>
       <a href="https://github.com/ChrisRaynaldo/coursera-test" class="btn" target="_blank">View on GitHub</a>
-      <a href="https://github.com/ChrisRaynaldo/coursera-test/zipball/master" class="btn" target="_blank">Download .zip</a>
-      <a href="https://github.com/ChrisRaynaldo/coursera-test/tarball/master" class="btn" target="_blank">Download .tar.gz</a>
+      <a href="https://github.com/ChrisRaynaldo/coursera-test/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/ChrisRaynaldo/coursera-test/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
