Fixed page layout and re-coloured the menu description

--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -11,19 +11,16 @@
 	<h1 id="title">OUR MENU</h1>
 	<div class="container">
 		<div class="col-lg col-md" id="chicken">
-			<div class="menu-card">
-			<p class="menu-title">Chicken</p>
-			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
+			<p class="menu-card">
+			<span class="menu-title">Chicken</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
 
 		<div class="col-lg col-md" id="beef">
-			<div class="menu-card">
-			<p class="menu-title">Beef</p>
-			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
+			<p class="menu-card">
+			<span class="menu-title">Beef</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
 
 		<div class="col-lg col-md" id="sushi">
-			<div class="menu-card">
-			<p class="menu-title">Sushi</p>
-			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div></div>
+			<p class="menu-card">
+			<span class="menu-title">Sushi</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
 	</div>
 </body>
 </html>
