Small fix for index.html content.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<hr>
 	
 		<h3>Feel free to use...</h3>
-		<p>Everything I have submitted for this course is safe and sound in my (public) github repository - see link above. Feel free to refer to my code should you face any difficulties in completing the assignments. All in all, good luck, and have fun coding!</p>
+		<p>...everything I have submitted for this course is safe and sound in my (public) github repository - see link above. Feel free to refer to my code should you face any difficulties in completing the assignments. All in all, good luck, and have fun coding!</p>
 
 		<footer class="site-footer">
 			<span class="site-footer-owner"><a href="https://github.com/ChrisRaynaldo/coursera-test">Coursera-test</a> is maintained by <a href="https://github.com/ChrisRaynaldo">ChrisRaynaldo</a>.</span>
