--- a/sendy-subscribe/index.html
+++ b/sendy-subscribe/index.html
@@ -15,6 +15,11 @@
 	<br/>
 	<input type="hidden" name="list" value="mIx7hTMkzbMfn2vt9lCUxg"/>
 	<input type="submit" name="submit" id="submit"/>
+
+	<p id="name">aldo</p>
+	<p id="email">chris@pearcomms.com</p>
+
+	<script type="js/script.js"></script>
 </form>
 </body>
 </html>
