Played around with :hover

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<li><h4><a href="https://chrisraynaldo.github.io/coursera-test/mod4-solution/harder/" target="_blank">&gt; Module 4 Assignment</a></h4><p>The fourth assignment is a bit different from what we had seen, since all of the assignments are in the Javascript section of the page. Hence, in order to see anything, you would need to "Inspect" the page when using a Chrome browser to see the console log, as well as the Javascript file that is causing the logs to be printed in the console.</p></li>
 
-				<li><h4><a href="https://chrisraynaldo.github.io/coursera-test/mod5-solution/" target="_blank">&gt; Module 5 Assignment</a></h4><p>The last assignment after 5 weeks of learning front-end web development! Though it may look like a lot, most of the code have been prepared by the kind lecturer. Since most of our job is to edit a couple of lines of code here and there in order to allow the website to load <em>dynamically</em>.</p></li>
+				<li><h4><a href="https://chrisraynaldo.github.io/coursera-test/mod5-solution/" target="_blank">&gt; Module 5 Assignment</a></h4><p>The last assignment after 5 weeks of learning front-end web development! Though it may look like a lot, most of the code have been prepared by the kind lecturer. Since most of our job is to edit a couple of lines of code here and there in order to allow the website to load <span class="dynamically">dynamically</span>.</p></li>
 			</ul><!-- assignment-list -->
 
 		<hr>
